compiler-core/src/go/tests/snapshots/gleam_core__go__tests__assert__assert_as_last_statement_of_nil_fn.snap
---
source: compiler-core/src/go/tests/assert.rs
expression: "\npub fn go() -> Nil {\n  assert True\n}\n"
---
----- SOURCE CODE

pub fn go() -> Nil {
  assert True
}


----- COMPILED GO
package thepackage

func Go() struct{} {
  if !(true) { panic("assertion failed at my/mod:3") }
  return struct{}{}
}
