compiler-core/src/go/tests/snapshots/gleam_core__go__tests__assert__assert_expression.snap
---
source: compiler-core/src/go/tests/assert.rs
expression: "\npub fn go(x: Int) -> Int {\n  assert x > 0\n  x\n}\n"
---
----- SOURCE CODE

pub fn go(x: Int) -> Int {
  assert x > 0
  x
}


----- COMPILED GO
package thepackage

func Go(x int64) int64 {
  if !((x > int64(0))) { panic("assertion failed at my/mod:3") }
  return x
}
